// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommonSpinner renders 1`] = `
<div>
  <div
    class="c-CommonSpinner__Wrapper"
  >
    <div
      class="c-CommonSpinner"
      data-testid="common-spinner"
    >
      <div />
      <div />
      <div />
      <div />
    </div>
  </div>
</div>
`;

exports[`CommonSpinner renders in cover mode 1`] = `
<div>
  <div
    class="c-CommonSpinner__Wrapper c-CommonSpinner__Wrapper_cover"
  >
    <div
      class="c-CommonSpinner"
      data-testid="common-spinner"
    >
      <div />
      <div />
      <div />
      <div />
    </div>
  </div>
</div>
`;
